# lakehouse-data-provider

./: README.md  pyproject.toml
docs/: design.md
scripts/: generate_sample_data.py  ingest_data.py  init_tables.py
src/lakehouse_provider/: __init__.py  cli.py  client.py  config.py  schema.py  types.py
src/lakehouse_provider/mcp/: __init__.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_config.py  test_mcp.py  test_schema.py  test_types.py
